--- a/task.ipynb
+++ b/task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -307,65 +307,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "OpenCV(4.8.0) :-1: error: (-5:Bad argument) in function 'rectangle'\n> Overload resolution failed:\n>  - Can't parse 'pt1'. Expected sequence length 2, got 3\n>  - Can't parse 'pt1'. Expected sequence length 2, got 3\n>  - Can't parse 'rec'. Expected sequence length 4, got 3\n>  - Can't parse 'rec'. Expected sequence length 4, got 3\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 31\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[39mwhile\u001b[39;00m(\u001b[39m1\u001b[39m):\n\u001b[0;32m     30\u001b[0m     cv2\u001b[39m.\u001b[39mimshow(\u001b[39m'\u001b[39m\u001b[39mTower\u001b[39m\u001b[39m'\u001b[39m,towers)\n\u001b[1;32m---> 31\u001b[0m     cv2\u001b[39m.\u001b[39;49mrectangle(towers, (\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m), (\u001b[39m10\u001b[39;49m,\u001b[39m10\u001b[39;49m,\u001b[39m10\u001b[39;49m), (\u001b[39m255\u001b[39;49m,\u001b[39m0\u001b[39;49m,\u001b[39m0\u001b[39;49m), \u001b[39m2\u001b[39;49m)\n\u001b[0;32m     32\u001b[0m     key \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mwaitKey(\u001b[39m1\u001b[39m)\n\u001b[0;32m     33\u001b[0m     \u001b[39mif\u001b[39;00m key \u001b[39m==\u001b[39m \u001b[39m27\u001b[39m:\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.8.0) :-1: error: (-5:Bad argument) in function 'rectangle'\n> Overload resolution failed:\n>  - Can't parse 'pt1'. Expected sequence length 2, got 3\n>  - Can't parse 'pt1'. Expected sequence length 2, got 3\n>  - Can't parse 'rec'. Expected sequence length 4, got 3\n>  - Can't parse 'rec'. Expected sequence length 4, got 3\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1067, 1600, 3)\n",
+      "Point 1: (688, 27)\n",
+      "Point 2: (673, 90)\n"
      ]
     }
    ],
    "source": [
-    "# point1 = None\n",
-    "# point2 = None\n",
-    "# segment = None\n",
-    "# minY=None\n",
-    "# maxY=None\n",
-    "# def cropFunction(event,x,y,flags,param):\n",
-    "#     global point1, point2, segment\n",
-    "#     if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "#         if point1 is None:\n",
-    "#             point1 = (x,y)\n",
-    "#             print(f\"Point 1: {point1}\")\n",
-    "            \n",
-    "#         elif point2 is None:\n",
-    "#             point2 = (x,y)\n",
-    "#             print(f\"Point 2: {point2}\")\n",
-    "             \n",
-    "            \n",
-    "#             minY= min(point1[1],point2[1])\n",
-    "#             maxY= max(point1[1],point2[1])\n",
-    "            \n",
-    "#             segment= towers[minY:maxY, :]   \n",
+    "point1=None\n",
+    "point2=None\n",
+    "y1=y2=0\n",
+    "def mouse_callback(event, x, y, flags, param):\n",
+    "    global point1, point2, drawing,y1,y2\n",
     "\n",
-    "        \n",
-    "# # Creating a window to add the mouse callback to\n",
-    "# towers = cv2.imread('feature1.jpeg', 0)\n",
-    "# cv2.namedWindow('Tower')\n",
-    "# cv2.setMouseCallback('Tower',cropFunction)\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        if point1 is None:\n",
+    "            point1 = (x,y) \n",
+    "            y1=y\n",
+    "            print(f\"Point 1: {point1}\") \n",
+    "            \n",
+    "        elif point2 is None:\n",
+    "            point2 = (x,y)\n",
+    "            y2=y\n",
+    "            print(f\"Point 2: {point2}\")\n",
+    "        width = image.shape[1]\n",
+    "        if point1 and point2:\n",
+    "            cv2.rectangle(image, (0,y1), (width,y2), (0, 0, 100), -1)\n",
     "\n",
-    "# while(1):\n",
-    "#     cv2.imshow('Tower',towers)\n",
-    "#     cv2.rectangle(towers, (1,1,1), (10,10,10), (255,0,0), 2)\n",
-    "#     key = cv2.waitKey(1)\n",
-    "#     if key == 27:\n",
-    "#         break\n",
-    "# cv2.destroyAllWindows()"
+    "\n",
+    "image = cv2.imread('threshold.jpg')\n",
+    "print (image.shape)\n",
+    "cv2.namedWindow('Image')\n",
+    "cv2.setMouseCallback('Image', mouse_callback)\n",
+    "\n",
+    "while True:\n",
+    "    cv2.imshow('Image', image)\n",
+    "    key = cv2.waitKey(1)\n",
+    "    if key == 27:\n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
